; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shellpath.c_test_PidlTypes.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shellpath.c_test_PidlTypes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@CSIDL_DESKTOP = common dso_local global i32 0, align 4
@requiredShellValues = common dso_local global i32 0, align 4
@optionalShellValues = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_PidlTypes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_PidlTypes() #0 {
  %1 = load i32, i32* @FALSE, align 4
  %2 = load i32, i32* @CSIDL_DESKTOP, align 4
  %3 = call i32 @test_SHGetFolderPath(i32 %1, i32 %2)
  %4 = load i32, i32* @FALSE, align 4
  %5 = load i32, i32* @CSIDL_DESKTOP, align 4
  %6 = call i32 @test_SHGetSpecialFolderPath(i32 %4, i32 %5)
  %7 = load i32, i32* @requiredShellValues, align 4
  %8 = load i32, i32* @requiredShellValues, align 4
  %9 = call i32 @ARRAY_SIZE(i32 %8)
  %10 = load i32, i32* @FALSE, align 4
  %11 = call i32 @test_ShellValues(i32 %7, i32 %9, i32 %10)
  %12 = load i32, i32* @optionalShellValues, align 4
  %13 = load i32, i32* @optionalShellValues, align 4
  %14 = call i32 @ARRAY_SIZE(i32 %13)
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i32 @test_ShellValues(i32 %12, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @test_SHGetFolderPath(i32, i32) #1

declare dso_local i32 @test_SHGetSpecialFolderPath(i32, i32) #1

declare dso_local i32 @test_ShellValues(i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
